--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 body{
-   background-color: #999;
+   background-color: #fff;
    margin: 0px;
    padding: 0px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.dark-mode{
+   /* filter: drop-shadow(10px 10px 5px #000000); */
+   background: rgb(39,3,49);
+background: linear-gradient(0deg, rgba(39,3,49,1) 0%, rgba(20,75,158,1) 100%);
+}
+.light-mode{
+   /* filter: drop-shadow(10px 10px 5px #61878a); */
+   background: rgb(254,255,190);
+background: linear-gradient(0deg, rgba(254,255,190,1) 0%, rgba(81,190,255,1) 100%);
+   
 }
 .mein-contanir{
    display: flex;
@@ -10,16 +21,23 @@ body{
    align-items: center;
    height: 100vh;
 }
+.mein{
+   /* background: rgb(254,255,190);
+background: linear-gradient(0deg, rgba(254,255,190,1) 0%, rgba(81,190,255,1) 100%); */
+   background-color: #fff;
+   /* background: rgb(39,3,49);
+background: linear-gradient(0deg, rgba(39,3,49,1) 0%, rgba(20,75,158,1) 100%); */
+}
 .chw{
-   /* color: #fff; */
+   color: #000;
    /* width: 350px; */
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-   background-color: #fff;
    /* background-color: rgb(51, 73, 95); */
    padding: 30px;
    border-radius: 10px;
 }
 .contanir{
+   /* background-color: transparent; */
    color: #fff;
    /* width: 350px; */
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -31,6 +49,7 @@ body{
    transition: 1.1;
 }
 .contanir-1{
+   /* background-color: transparent; */
    display: flex;
    gap: 10px;
    justify-content: space-between;
@@ -52,7 +71,7 @@ body{
 .contanir-1 button{
    background-color: rgb(250, 50, 50);
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-   background: dro;
+   /* background: dro; */
    padding: 10px 15px;
    border-radius: 50%;
    border: none;
@@ -77,9 +96,11 @@ body{
 .images img{
    transition: 1.1;
    margin-top: 10px;
-   /* filter: drop-shadow(10px 10px 5px #d3d3d3); */
    width: 200px;
+   /* filter: drop-shadow(10px 10px 5px #000116); */
 }
+/* filter: drop-shadow(10px 10px 5px #000000); */
+   
 #temperature span{
    font-size: 70px;
    margin-top: 10px;
